--- a/src/main/webapp/helloform.html
+++ b/src/main/webapp/helloform.html
@@ -18,8 +18,7 @@ and open the template in the editor.
            <input type="radio" name="lang" value="fr"> Francês
            <input type="radio" name="lang" value="de"> Alemão<br><br>
            Nome: <input type="text" name="nome"/><br><br>
-           <input type="submit" value="Cumprimentar"/>
+           <input style="background-color: #ff0000;" type="submit" value="Cumprimentar"/>
         </form>
-
     </body>
 </html>
