Adicionando linguas nos metodos

--- a/src/main/webapp/helloform.html
+++ b/src/main/webapp/helloform.html
@@ -16,8 +16,8 @@ and open the template in the editor.
            <br>Idioma: <input type="radio" name="lang" value="pt" checked> Português
            <input type="radio" name="lang" value="en"> Inglês
            <input type="radio" name="lang" value="fr"> Francês
-           <input type="radio" name="lang" value="de"> Alemão<br><br>
-           <input type="radio" name="lang" value="lp"> Língua do P<br><br>
+           <input type="radio" name="lang" value="de"> Alemão
+           <input type="radio" name="lang" value="lp"> Língua do P
            <input type="radio" name="lang" value="bn"> Binário<br><br>
            Nome: <input type="text" name="nome"/><br><br>
            <input style="background-color: #ff0000;" type="submit" value="Cumprimentar"/>
